--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 10px;
+    margin: 0 0 0px;
     font-family: "Droid Serif",georgia,serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -106,7 +106,7 @@ a:focus {
     -webkit-transition: background .3s ease-in-out;
     -moz-transition: background .3s ease-in-out;
     transition: background .3s ease-in-out;
-    padding: 8px 5px 0px 5px;
+    padding: 8px 0px 0px 10px;
 }
 
 .navbar-custom .nav li a:hover {
@@ -195,6 +195,15 @@ a:focus {
     font-family: "Open Sans",georgia,sans;
 }
 
+.nosidepad {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.intro-text {
+    padding-top: 10px;
+}
+
 @media(min-width:768px) {
     .intro {
         height: 100%;
@@ -203,13 +212,17 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 38px;
+        font-size: 50px;
         font-weight: 400;
     }
 
     .intro .intro-body .intro-text {
         font-size: 26px;
         font-weight: 400;
+    }
+    
+    .brand-heading {
+         padding-top: 0px;
     }
     
     .alt-logo {
@@ -219,7 +232,26 @@ a:focus {
     .navbar-brand {
         padding: 0px;
     }
+    
+    .smallshow {
+        visibility: hidden;
+    }
+    
+    .darktext {
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    
+    .shadow img {
+        margin-top: 14px;
+    }
+    
+    .higher {
+        min-height: 150px;
+    }
 }
+
+    
 
 @media(max-width:767px) {
     .intro {
@@ -227,12 +259,18 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 28px;
+        font-size: 40px;
         font-weight: 400;
     }
     
     .brand-heading {
-         padding-top: 10%;
+        padding-top: 0px;
+        padding-bottom: 10px;
+    }
+    
+    .darktext {
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 
     .intro .intro-body .intro-text {
@@ -246,6 +284,16 @@ a:focus {
     
     .alt-logo {
         display: table-row;
+        max-height: 0px;
+    }
+    
+    .largeshow {
+        visibility: hidden;
+    }
+    
+    .smallshow {
+        display: inline-block;
+        text-align: center;
     }
 }
 
@@ -255,14 +303,27 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 22px;
+        font-size: 36px;
         font-weight: 400;
     }
 
     .intro .intro-body .intro-text {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: 300;
     }
+    
+    .brand-heading {
+        padding-top: 0px;
+        padding-bottom: 10px;
+    }
+    
+    .darktext {
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    
+    .alt-logo {
+        height: 5px:}
 }
 
 .btn-circle {
@@ -376,6 +437,36 @@ a:focus {
     }
 }
 
+.sierra {
+    font-family: "Open Sans",sans-serif;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #010141;
+    font-size: 24px;
+    padding: 15px;
+}
+
+@media(min-width:768px) {
+    .sierra {
+        min-height: 140px;
+    }
+}
+
+@media(min-width:1200px) {
+    .sierra {
+        min-height: 370px;
+    }
+}
+
+@media(max-width:767px) {
+    .splitborder {
+        border: 5px solid #010141;
+        padding-top: 15px;
+        padding-bottom: 30px;
+    }
+}
+    
+
 .btn {
     border-radius: 0;
     text-transform: uppercase;
@@ -384,6 +475,7 @@ a:focus {
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
+    min-width: 140px;
 }
 
 .btn-default {
@@ -403,7 +495,7 @@ a:focus {
 
 .btn-mcta:hover,
 .btn-mcta:focus {
-    border: 2px solid #fff;
+    border: 2px solid #010141;
     outline: 0;
     color: #000;
     opacity: 1;
@@ -421,7 +513,7 @@ a:focus {
 .btn-cta {
     -webkit-border-radius: 10;
     -moz-border-radius: 10;
-    border-radius: 10px;
+    border-radius: 0px;
     color: #000;
     background: #fff;
     padding-top: 1em;
@@ -436,8 +528,8 @@ a:focus {
 .btn-mcta {
     -webkit-border-radius: 10;
     -moz-border-radius: 10;
-    border-radius: 10px;
-    color: #fff;
+    border-radius: 0px;
+    color: #010141;
     background: transparent;
     padding-top: 1em;
     padding-right: 1.44em;
@@ -445,7 +537,7 @@ a:focus {
     padding-bottom: 1em;
     padding-left: 1.44em;
     text-decoration: none;
-    border: solid #fff 2px;
+    border: solid #010141 2px;
 }
 
 .btn-mctad:hover,
@@ -462,13 +554,13 @@ a:focus {
     border: 2px solid #010141;
     outline: 0;
     opacity: 1;
-    background-color: #e8e8e8;
+    background-color: #fff;
 }
 
 .btn-ctad {
     -webkit-border-radius: 10;
     -moz-border-radius: 10;
-    border-radius: 10px;
+    border-radius: 0px;
     color: #fff;
     background: #010141;
     padding-top: 1em;
@@ -483,7 +575,7 @@ a:focus {
 .btn-mctad {
     -webkit-border-radius: 10;
     -moz-border-radius: 10;
-    border-radius: 10px;
+    border-radius: 0px;
     color: #010141;
     background: rgba(255,255,255,0.8);
     padding-top: 1em;
@@ -566,7 +658,7 @@ body {
 }
 
 ul {
-    padding: 5px;
+    padding: 0px;
     list-style: none;
 }
 
@@ -639,7 +731,7 @@ ul {
 .btn-reverse {
     -webkit-border-radius: 10;
     -moz-border-radius: 10;
-    border-radius: 10px;
+    border-radius: 0px;
     color: #fff;
     background: transparent;
     padding-top: 1em;
@@ -668,7 +760,7 @@ ul {
 .btn-reversed {
     -webkit-border-radius: 10;
     -moz-border-radius: 10;
-    border-radius: 10px;
+    border-radius: 0px;
     color: #010141;
     background: transparent;
     padding-top: 1em;
@@ -772,10 +864,6 @@ ul {
     margin-top: 20px;
 }
 
-.minnie {
-    min-width: 150px;
-}
-
 .darkness {
     background-color: rgba(0, 0, 0, 0.2);
     padding-top: 30px;
@@ -784,8 +872,8 @@ ul {
 
 .lightness {
     background-color: rgba(255, 255, 255, 0.9);
-    padding-top: 30px;
     padding-bottom: 30px;
+    padding-top: 15px;
 }
 
 .darktext {
@@ -801,7 +889,7 @@ ul {
 }
 
 .logopad {
-    margin-top: 12px;
+    margin-top: 0px;
 }
 
 .form-group {
