--- a/css/article.css
+++ b/css/article.css
@@ -44,6 +44,6 @@ body {
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
 
-.container {
+.margin {
     margin-left: 25px;
 }
