--- a/css/embed.css
+++ b/css/embed.css
@@ -13,3 +13,11 @@
   width: 100%; 
   height: 100%; 
 }
+
+.vertical-limit {
+  position: relative; 
+  padding-bottom: 56.25%; 
+  height: 0; 
+  overflow: hidden; 
+  max-height: 100%; 
+} 
